# Agentic-Tutor

./: .gitignore  README.md  license  pyproject.toml  readme_chinese.md
.github/: copilot-instructions.md
src/agents/: host_agent.py
src/api/: __main__.py  app.py  deps.py
src/api/routers/: auth.py  chat.py  file.py  session.py  user.py
src/config/: settings.py
src/db/: __init__.py  db.py  models.py
src/repositories/: chat_repo.py  file_repo.py  persona_repo.py  user_repo.py
src/schemas/: __init__.py  chat.py  file.py  persona.py  profile.py  session.py  user.py
src/utils/: __init__.py  file_utils.py  logger.py  security.py  test.py
static/css/: chat.css  fonts.css  login.css
static/js/: chat.js  login.js
static/js/marked-9.1.2/: marked.min.js
static/pages/: chat.html  login.html
