[project]
name = "agentic-tutor"
version = "0.1.0"
description = "An AI agent that supports Chinese kids in growing happily.It all began with my baby child..."
authors = [
    {name = "Xiong Hui", email = "shawnhui1012@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope[full]>=1.0.3",
    "aiosqlite>=0.21.0",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.117.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
]
